--- a/style/style.css
+++ b/style/style.css
@@ -44,7 +44,6 @@ p, a {
   height: auto;
   margin: 0 auto;
   overflow: hidden;
-  background-color: #686868;
 }
 
 .main {
@@ -57,7 +56,6 @@ p, a {
   height: auto;
   margin: 0 auto;
   overflow: hidden;
-  background-color: #b7b7b7;
   padding: 4px;
 }
 
@@ -369,5 +367,237 @@ input[type=checkbox] {
   .blog__cards {
     max-width: 300px;
     height: auto;
+  }
+}
+.footer {
+  padding: 40px;
+  width: 100%;
+  height: 290px;
+  background-color: #000000;
+  color: #ffffff;
+  z-index: -5;
+}
+.footer .footer-container {
+  justify-content: space-around;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 0.7fr 1.8fr;
+  grid-template-rows: 1fr;
+}
+@media (max-width: 768px) {
+  .footer .footer-container {
+    grid-template-columns: 1fr 0.7fr 1fr;
+    grid-template-rows: 1fr;
+  }
+}
+@media (max-width: 576px) {
+  .footer .footer-container {
+    grid-template-columns: auto auto auto;
+    grid-template-rows: 1fr;
+  }
+}
+.footer .footer__title {
+  font-size: 16px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  color: #ffffff;
+}
+@media (max-width: 576px) {
+  .footer .footer__title {
+    font-size: 10px;
+  }
+}
+.footer .footer__contact .contact {
+  width: auto;
+}
+@media (max-width: 576px) {
+  .footer .footer__contact .contact {
+    width: 125px;
+  }
+}
+.footer .footer__contact .contact__item-1 {
+  display: grid;
+  grid-template-columns: 0.15fr 0.3fr;
+  grid-template-rows: 1fr;
+}
+.footer .footer__contact .contact__item-1 .img {
+  width: 25px;
+  height: auto;
+}
+.footer .footer__contact .contact__item-1 .item__text {
+  font-family: "Roboto" !important;
+  width: 150px;
+  height: 20px;
+  margin-left: 15px;
+  grid-column: 2/3;
+  line-height: 25px;
+  font-size: 16px;
+  font-weight: 300;
+  color: #a8a8a8;
+}
+@media (max-width: 576px) {
+  .footer .footer__contact .contact__item-1 .item__text {
+    font-size: 9px;
+    margin-bottom: 0;
+  }
+  .footer .footer__contact .contact__item-1 .img {
+    width: 15px;
+  }
+}
+.footer .footer__contact .contact__item-2 {
+  display: flex;
+  margin-top: 25px;
+}
+.footer .footer__contact .contact__item-2 .img {
+  width: 25px;
+  height: auto;
+  margin: auto 0;
+}
+.footer .footer__contact .contact__item-2 .item__text {
+  font-family: "Roboto" !important;
+  margin-left: 15px;
+  width: 200px;
+  height: 20px;
+  line-height: 28px;
+  font-size: 16px;
+  font-weight: 300;
+  color: #a8a8a8;
+}
+@media (max-width: 576px) {
+  .footer .footer__contact .contact__item-2 .item__text {
+    font-size: 9px;
+    margin-bottom: 0;
+  }
+  .footer .footer__contact .contact__item-2 .img {
+    width: 15px;
+  }
+}
+.footer .footer__contact .contact__item-3 {
+  display: flex;
+  margin-top: 14px;
+}
+.footer .footer__contact .contact__item-3 .img {
+  width: 25px;
+  height: auto;
+  margin: auto 0;
+}
+.footer .footer__contact .contact__item-3 .item__text {
+  font-family: "Roboto" !important;
+  margin-left: 15px;
+  width: 200px;
+  height: 20px;
+  line-height: 21px;
+  font-size: 16px;
+  font-weight: 300;
+  color: #a8a8a8;
+}
+@media (max-width: 576px) {
+  .footer .footer__contact .contact__item-3 .item__text {
+    font-size: 9px;
+    margin-bottom: 0;
+    width: a;
+  }
+  .footer .footer__contact .contact__item-3 .img {
+    width: 15px;
+  }
+}
+.footer .navbar .nav__item {
+  text-decoration: none;
+  color: #a8a8a8;
+}
+.footer .navbar .nav__item .navbar__item {
+  margin: 14px 0 14px 0;
+  list-style-type: none;
+  font-size: 18px;
+  font-weight: 400;
+  font-family: "Roboto" !important;
+}
+@media (max-width: 576px) {
+  .footer .navbar .nav__item .navbar__item {
+    margin: 0 0 10px 0;
+    list-style-type: none;
+    font-size: 10px;
+    font-weight: 400;
+  }
+}
+.footer .footer__social {
+  margin-left: 20px;
+  display: grid;
+  grid-template-rows: 0.4fr 0.3fr 1fr;
+  grid-template-columns: 0.8fr 1fr;
+}
+@media (max-width: 576px) {
+  .footer .footer__social {
+    margin-left: 10px;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+  }
+}
+.footer .social__image {
+  display: flex;
+  justify-content: space-between;
+  max-width: 190px;
+  width: 100%;
+}
+.footer .social__image .image__item {
+  position: relative;
+  margin: 10px;
+  border-radius: 50%;
+  text-decoration: none;
+}
+@media (max-width: 425px) {
+  .footer .social__image .image__item {
+    margin: 0;
+  }
+  .footer .social__image .image__item img {
+    width: 15px;
+    height: 15px;
+  }
+}
+.footer .logo {
+  justify-self: right;
+  grid-column: 2/3;
+  grid-row: 1/2;
+  width: 136px;
+  height: 136px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footer .logo .img {
+  margin: auto auto;
+  width: 95px;
+  height: 95px;
+  transition: all 0.3s;
+}
+@media (max-width: 768px) {
+  .footer .logo {
+    margin-top: 20px;
+    width: 80px;
+    height: 80px;
+    grid-column: 1/2;
+    grid-row: 2/3;
+    justify-self: center;
+  }
+  .footer .logo .img {
+    width: 60px;
+    height: 60px;
+  }
+}
+
+@media (max-width: 576px) {
+  .footer {
+    height: auto;
+    padding: 10px;
+  }
+}
+@media (max-width: 350px) {
+  .footer {
+    height: auto;
+    padding: 3px;
   }
 }/*# sourceMappingURL=style.css.map */
