--- a/style/style.scss
+++ b/style/style.scss
@@ -55,7 +55,6 @@ p,a {
     height: auto;
     margin: 0 auto;
     overflow: hidden;
-    background-color: #686868;
 }
 
 .main {
@@ -68,7 +67,6 @@ p,a {
     height: auto;
     margin: 0 auto;
     overflow: hidden;
-    background-color: #b7b7b7;
     padding: 4px;
 }
 @media (max-width: 450px) {
@@ -408,252 +406,252 @@ input[type="checkbox"] {
 
 
 
-// .footer {
-//     padding: 40px;
-//     width: 100%;
-//     height: 290px;
-//     background-color: $color_text_2;
-//     color: $color_text_1;
-//     z-index: -5; 
+.footer {
+    padding: 40px;
+    width: 100%;
+    height: 290px;
+    background-color: $color_text_2;
+    color: $color_text_1;
+    z-index: -5; 
     
 
-//     .footer-container {
-//         justify-content: space-around;
-//         max-width: 1200px;
-//         margin: 0 auto;
-//         display: grid;
-//         grid-template-columns: 1fr 0.7fr 1.8fr;
-//         grid-template-rows: 1fr;
+    .footer-container {
+        justify-content: space-around;
+        max-width: 1200px;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 1fr 0.7fr 1.8fr;
+        grid-template-rows: 1fr;
         
-//     }
-//     @media (max-width: 768px) {
-//         .footer-container{
-//             grid-template-columns: 1fr 0.7fr 1fr;
-//             grid-template-rows: 1fr;
-//         }
-//     }
-//     @media (max-width: 576px) {
-//         .footer-container{
-//             grid-template-columns: auto auto auto;
-//             grid-template-rows: 1fr;
-//         }
-//     }
+    }
+    @media (max-width: 768px) {
+        .footer-container{
+            grid-template-columns: 1fr 0.7fr 1fr;
+            grid-template-rows: 1fr;
+        }
+    }
+    @media (max-width: 576px) {
+        .footer-container{
+            grid-template-columns: auto auto auto;
+            grid-template-rows: 1fr;
+        }
+    }
 
 
-// .footer__title {
-//     font-size: 16px;
-//     font-weight: 700;
-//     text-transform: uppercase;
-//     margin-bottom: 20px;
-//     color: $color_text_1;
-// }
-// @media (max-width: 576px) {
-//     .footer__title {
-//         font-size: 10px;
-//     }
-// }
+.footer__title {
+    font-size: 16px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    color: $color_text_1;
+}
+@media (max-width: 576px) {
+    .footer__title {
+        font-size: 10px;
+    }
+}
 
-// .footer__contact {
-//     .contact {
-//         width: auto;
-//     }
-//     @media (max-width: 576px) {
-//         .contact {
-//             width: 125px;
-//         }
-//     }
-//     .contact__item-1 {
-//         display: grid;
-//         grid-template-columns: 0.15fr 0.3fr;
-//         grid-template-rows: 1fr;
-//         .img {
-//             width: 25px;
-//             height: auto;
-//         }
-//         .item__text {
-//             font-family: 'Roboto'!important;
-//             width: 150px;
-//             height: 20px;
-//             margin-left: 15px;
-//             grid-column: 2/3;
-//             line-height: 25px;
-//             font-size: 16px;
-//             font-weight: 300;
-//             color: $color_text_3;
-//         }
-//         @media (max-width: 576px) {
-//             .item__text {
-//                 font-size: 9px;
-//                 margin-bottom: 0;
-//             }
-//             .img {
-//                 width: 15px;
-//             }
-//         }
-//     }
-//     .contact__item-2 {
-//         display: flex;
-//         margin-top: 25px;
-//         .img {
-//             width: 25px;
-//             height: auto;
-//             margin: auto 0;
-//         }
-//         .item__text {
-//             font-family: 'Roboto'!important;
-//             margin-left: 15px;
-//             width: 200px;
-//             height: 20px;
-//             line-height: 28px;
-//             font-size: 16px;
-//             font-weight: 300;
-//             color: $color_text_3;
-//         }
-//         @media (max-width: 576px) {
-//             .item__text {
-//                 font-size: 9px;
-//                 margin-bottom: 0;
-//             }
-//             .img {
-//                 width: 15px;
-//             }
-//         }
-//     }     
-//         .contact__item-3 {
-//         display: flex;
-//         margin-top: 14px;
-//         .img {
-//             width: 25px;
-//             height: auto;
-//             margin: auto 0;
-//         }
-//         .item__text {
-//             font-family: 'Roboto'!important;
-//             margin-left: 15px;
-//             width: 200px;
-//             height: 20px;
-//             line-height: 21px;
-//             font-size: 16px;
-//             font-weight: 300;
-//             color: $color_text_3;
-//         }
-//         @media (max-width: 576px) {
-//             .item__text {
-//                 font-size: 9px;
-//                 margin-bottom: 0;
-//                 width: a;
-//             }
-//             .img {
-//                 width: 15px;
-//             }
-//         }
-//     } 
-// }
+.footer__contact {
+    .contact {
+        width: auto;
+    }
+    @media (max-width: 576px) {
+        .contact {
+            width: 125px;
+        }
+    }
+    .contact__item-1 {
+        display: grid;
+        grid-template-columns: 0.15fr 0.3fr;
+        grid-template-rows: 1fr;
+        .img {
+            width: 25px;
+            height: auto;
+        }
+        .item__text {
+            font-family: 'Roboto'!important;
+            width: 150px;
+            height: 20px;
+            margin-left: 15px;
+            grid-column: 2/3;
+            line-height: 25px;
+            font-size: 16px;
+            font-weight: 300;
+            color: $color_text_3;
+        }
+        @media (max-width: 576px) {
+            .item__text {
+                font-size: 9px;
+                margin-bottom: 0;
+            }
+            .img {
+                width: 15px;
+            }
+        }
+    }
+    .contact__item-2 {
+        display: flex;
+        margin-top: 25px;
+        .img {
+            width: 25px;
+            height: auto;
+            margin: auto 0;
+        }
+        .item__text {
+            font-family: 'Roboto'!important;
+            margin-left: 15px;
+            width: 200px;
+            height: 20px;
+            line-height: 28px;
+            font-size: 16px;
+            font-weight: 300;
+            color: $color_text_3;
+        }
+        @media (max-width: 576px) {
+            .item__text {
+                font-size: 9px;
+                margin-bottom: 0;
+            }
+            .img {
+                width: 15px;
+            }
+        }
+    }     
+        .contact__item-3 {
+        display: flex;
+        margin-top: 14px;
+        .img {
+            width: 25px;
+            height: auto;
+            margin: auto 0;
+        }
+        .item__text {
+            font-family: 'Roboto'!important;
+            margin-left: 15px;
+            width: 200px;
+            height: 20px;
+            line-height: 21px;
+            font-size: 16px;
+            font-weight: 300;
+            color: $color_text_3;
+        }
+        @media (max-width: 576px) {
+            .item__text {
+                font-size: 9px;
+                margin-bottom: 0;
+                width: a;
+            }
+            .img {
+                width: 15px;
+            }
+        }
+    } 
+}
 
 
 
-// .navbar {
-//     .nav__item {
-//         text-decoration: none;
-//         color: $color_text_3;
+.navbar {
+    .nav__item {
+        text-decoration: none;
+        color: $color_text_3;
 
-//         .navbar__item {
-//             margin: 14px 0 14px 0;
-//             list-style-type: none;
-//             font-size: 18px;
-//             font-weight: 400;
-//             font-family: 'Roboto'!important;
-//         }
-//         @media (max-width: 576px) {
-//             .navbar__item {
-//                 margin: 0 0 10px 0;
-//                 list-style-type: none;
-//                 font-size: 10px;
-//                 font-weight: 400;
-//             }
-//         }
-//     }
-// }
-// .footer__social{
-//     margin-left: 20px;
-//     display: grid;
-//     grid-template-rows: 0.4fr 0.3fr 1fr;
-//     grid-template-columns: 0.8fr 1fr ;
-// }
-// @media (max-width: 576px) {
-//     .footer__social{
-//         margin-left: 10px;
-//         grid-template-rows: 1fr;
-//         grid-template-columns: 1fr;
-//     }
-// }
-//     .social__image {
-//         display: flex;
-//         justify-content: space-between;
-//         max-width: 190px;
-//         width: 100%;
-//         .image__item{
-//             position: relative;
-//             margin: 10px;
-//             border-radius: 50%;
-//             text-decoration: none;
-//         }
-//     }
-//     @media (max-width: 425px) {
-//         .social__image {
-//             .image__item {
-//                 margin: 0;
-//                 img {
-//                     width:15px;
-//                     height:15px;
-//                 }
-//             }
-//         }
-//     }
+        .navbar__item {
+            margin: 14px 0 14px 0;
+            list-style-type: none;
+            font-size: 18px;
+            font-weight: 400;
+            font-family: 'Roboto'!important;
+        }
+        @media (max-width: 576px) {
+            .navbar__item {
+                margin: 0 0 10px 0;
+                list-style-type: none;
+                font-size: 10px;
+                font-weight: 400;
+            }
+        }
+    }
+}
+.footer__social{
+    margin-left: 20px;
+    display: grid;
+    grid-template-rows: 0.4fr 0.3fr 1fr;
+    grid-template-columns: 0.8fr 1fr ;
+}
+@media (max-width: 576px) {
+    .footer__social{
+        margin-left: 10px;
+        grid-template-rows: 1fr;
+        grid-template-columns: 1fr;
+    }
+}
+    .social__image {
+        display: flex;
+        justify-content: space-between;
+        max-width: 190px;
+        width: 100%;
+        .image__item{
+            position: relative;
+            margin: 10px;
+            border-radius: 50%;
+            text-decoration: none;
+        }
+    }
+    @media (max-width: 425px) {
+        .social__image {
+            .image__item {
+                margin: 0;
+                img {
+                    width:15px;
+                    height:15px;
+                }
+            }
+        }
+    }
 
-//     .logo{
-//         justify-self: right;
-//         grid-column: 2/3;
-//         grid-row: 1/2;
-//         width: 136px;
-//         height: 136px;
-//         background-color: $color_3;
-//         border-radius: 50%;
-//         display: flex;
-//         align-items: center;
-//         justify-content: center;
-//         .img {
-//             margin: auto auto;
-//             width: 95px;
-//             height: 95px;
-//             transition: all 0.3s;
+    .logo{
+        justify-self: right;
+        grid-column: 2/3;
+        grid-row: 1/2;
+        width: 136px;
+        height: 136px;
+        background-color: $color_3;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .img {
+            margin: auto auto;
+            width: 95px;
+            height: 95px;
+            transition: all 0.3s;
             
-//         }   
-//     }
-//     @media (max-width: 768px) {
-//         .logo {
-//             margin-top: 20px;
-//             width: 80px;
-//             height: 80px;
-//             grid-column: 1/2;
-//             grid-row: 2/3;
-//             justify-self: center;
-//             .img {
-//                 width: 60px;
-//                 height: 60px;
-//             }
-//         }
-//     }
-// }
-// @media (max-width: 576px) {
-//     .footer{
-//         height: auto;
-//         padding: 10px;
-//     }
-// }
-// @media (max-width: 350px) {
-//     .footer{
-//         height: auto;
-//         padding: 3px;
-//     }
-// }
+        }   
+    }
+    @media (max-width: 768px) {
+        .logo {
+            margin-top: 20px;
+            width: 80px;
+            height: 80px;
+            grid-column: 1/2;
+            grid-row: 2/3;
+            justify-self: center;
+            .img {
+                width: 60px;
+                height: 60px;
+            }
+        }
+    }
+}
+@media (max-width: 576px) {
+    .footer{
+        height: auto;
+        padding: 10px;
+    }
+}
+@media (max-width: 350px) {
+    .footer{
+        height: auto;
+        padding: 3px;
+    }
+}
