--- a/style/style.css
+++ b/style/style.css
@@ -299,6 +299,10 @@ input[type=checkbox] {
   max-width: 430px;
   width: 100%;
   height: 370px;
+  transition: all linear 0.2s;
+}
+.blog__cards:hover {
+  transform: scale(1.04);
 }
 .blog__cards .blog__cards__image {
   display: flex;
