--- a/style/style.css
+++ b/style/style.css
@@ -46,21 +46,20 @@ p, a {
   overflow: hidden;
 }
 
-.navvigate {
-  position: relative;
-  max-width: 1200px;
-  width: 100%;
-  margin: 0 auto;
-}
-
 .navbarr {
   position: fixed;
   width: 100%;
-  max-width: 1200px;
+  max-width: 1920px;
   background-color: #ffffff;
   border: none;
   height: 100px;
   z-index: 999;
+}
+.navbarr .container-fluid {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+  background-color: #ffffff;
 }
 .navbarr .container-fluid .navbar-header {
   min-height: 70px;
@@ -283,7 +282,7 @@ p, a {
 }
 @media (max-width: 768px) {
   .main__title__item_1 {
-    margin: 10px 0 30px 0px;
+    margin: 10px 0 30px 110px;
   }
 }
 @media (max-width: 450px) {
@@ -540,6 +539,7 @@ input[type=checkbox] {
   }
 }
 .footer {
+  margin-top: 130px;
   padding: 40px;
   width: 100%;
   height: 290px;
