--- a/style/style.scss
+++ b/style/style.scss
@@ -57,23 +57,35 @@ p,a {
     overflow: hidden;
 }
 
-
-.navvigate {
-    position: relative;
-    max-width: 1200px;
-    width: 100%;
-    margin: 0 auto;
-}
+// .navvigate {
+//     position: relative;
+//     background-color: #000000;
+//     z-index: 988;
+//     width: 100%;
+//     max-width: 1920px;
+//     height: auto;
+//     height: 100px;
+// }
+// .navvigate_1 {
+//     position: relative;
+//     max-width: 1200px;
+//     width: 100%;
+//     margin: 0 auto;
+//     height: auto;
+// }
 .navbarr {
     position: fixed;
     width: 100%;
-    max-width: 1200px;
+    max-width: 1920px;
     background-color: #ffffff;
     border: none;
     height: 100px;
     z-index: 999;
     .container-fluid {
-
+        margin: 0 auto;
+        width: 100%;
+        max-width: 1200px;
+        background-color: #ffffff;
 
         .navbar-header {
             min-height: 70px;
@@ -304,7 +316,7 @@ p,a {
 }
 @media (max-width: 768px) {
     .main__title__item_1 {
-        margin: 10px 0 30px 0px;
+        margin: 10px 0 30px 110px;
     }
 }
 @media (max-width: 450px) {
@@ -583,6 +595,7 @@ input[type="checkbox"] {
 
 
 .footer {
+    margin-top: 130px;
     padding: 40px;
     width: 100%;
     height: 290px;
